refactoring icon and text alignment issues

--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -24,7 +24,7 @@
 .fontIcon {
     margin-top:45px;
     /* padding-right: 5px; */
-    margin-left: 160px;
+    margin-left: 170px;
     color: white;
     font-size: 3rem;
     /* text-align: center; */
@@ -32,26 +32,26 @@
 
 .emhead {
     margin-top: 20px;
-    margin-left: 120px;
+    margin-left: 125px;
     color: black;
 }
 
 .ctchead {
     margin-top: 20px;
-    margin-left: 104px;
+    margin-left: 119px;
     color: black;
     text-decoration: none;
 }
 
 .gthead {
     margin-top: 20px;
-    margin-left: 105px;   
+    margin-left: 135px;   
     color: black;
     text-decoration: none;
 }
 
 .em {
-    padding-left: 52px;
+    padding-left: 100px;
     color: black;
     font-size: 15px;
 }
@@ -64,7 +64,7 @@
 }
 
 .gt {
-    padding-left: 50px;
+    padding-left: 100px;
     text-decoration: none;
     color: black;
     font-size: 15px;
